--- a/PL/PL.csproj
+++ b/PL/PL.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\ML\ML.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Images\" />
+  </ItemGroup>
+
 </Project>
