--- a/PL/appsettings.json
+++ b/PL/appsettings.json
@@ -8,5 +8,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "PathFolder": {
+    "value": "C:\\Users\\digis\\Documents\\Leonardo Escogido Bravo\\GenMarzo\\PL\\ExcelCargaMasiva"
+  },
+
+  "ConnectionStringExcel": {
+    "value": "Provider=Microsoft.ACE.OLEDB.12.0;Extended Properties=Excel 12.0 XML;Data Source="
+  },
+
+  "TipoExcel": ".xlsx",
+ 
   "AllowedHosts": "*"
 }
